--- a/car_form.html
+++ b/car_form.html
@@ -1,3 +1,23 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CarDax</title>
+    <link rel="stylesheet" href="car_form.css">
+    <script src="car_form.js" defer></script>
+</head>
+
+<body>
+    <div class="container">
+        <button id="fetchDataBtn">GET CARS</button>
+        <div id="carInfo"></div>
+    </div>
+</body>
+
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
 
