--- a/car_form.html
+++ b/car_form.html
@@ -1,23 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarDax</title>
-    <link rel="stylesheet" href="car_form.css">
-    <script src="car_form.js" defer></script>
-</head>
-
-<body>
-    <div class="container">
-        <button id="fetchDataBtn">GET CARS</button>
-        <div id="carInfo"></div>
-    </div>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,6 +10,67 @@
 <body>
     <h1>WELCOME TO CARDAX</h1>
     <button id="fetchDataBtn">GET CARS</button>
+    <div id="root"></div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.development.js"></script>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+
+
+    <script type="text/babel">
+        function App() {
+            return (
+                <div className="App">
+                    <header className="App-header">
+                        <img src={'car.png'} className="logo" alt="Car" style={{ width: '150px', height: '120px' }} />
+                    </header>
+                </div>
+            );
+        }
+      
+        ReactDOM.render(
+            <React.StrictMode>
+                <App />
+            </React.StrictMode>,
+            document.getElementById('root')
+        );
+    </script>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            position: relative;
+         
+        }
+
+        .container {
+            max-width: 12px;
+            margin: 0 auto;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .logo {
+            position: absolute;
+            top: 50%;
+            left: 8%;
+            transform: translate(-50%, -50%);
+
+        }
+
+        .logo:hover {
+            filter: drop-shadow(0 0 1em red);
+        }
+
+        .logo.react:hover {
+            filter: drop-shadow(0 0 1em red);
+        }
+    </style>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -47,7 +88,7 @@
                         .then(data => {
                             const carsData = JSON.stringify(data);
                             sessionStorage.setItem('carsData', carsData);
-                            window.location.href = 'data.html'; // Redirect to data.html
+                            window.location.href = 'data.html';
                         })
                         .catch(error => {
                             console.error('Error fetching data:', error);
