--- a/car_form.html
+++ b/car_form.html
@@ -92,7 +92,8 @@
                         })
                         .catch(error => {
                             console.error('Error fetching data:', error);
-                            alert('Error fetching data. Please try again later.');
+                            window.location.href = 'error_page.html';
+                            // alert('Error fetching data. Please try again later.');
                         });
                 });
             } else {
