--- a/error_page.html
+++ b/error_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Information</title>
+    <title>ERROR</title>
     <link rel="stylesheet" href="error.css">
     <script src="car_form.js" defer></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="errorInfo">
-            <h1>Error fetching data</h1>
+            <h1>ERROR</h1>
             <p>There was an error fetching car data. Please try again later.</p>
         </div>
     </div>
